--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Roboto&display=swap');
+@import url("https://fonts.googleapis.com/css?family=Roboto&display=swap");
 
 * {
   margin: 0;
@@ -6,11 +6,15 @@
 }
 
 body {
-  padding-top: 1rem;
+  padding-top: 0;
   text-align: center;
   box-sizing: border-box;
-  font-family: 'Roboto', sans-serif;
-  background-color: rgba(255, 0, 0, 0.438);
+  font-family: "Roboto", sans-serif;
+  background-color: rgba(255, 0, 128, 0.945);
+  color: white;
+}
+h1 {
+  padding: 0 0 0 0;
 }
 
 .App {
